<resources>

    <string name="app_name">Thapar Events Guide</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="titlelabel">""</string>
    <string name="datelabel">"Date: "</string>
    <string name="venuelabel">"Venue: "</string>
    <string name="timelabel">"Time: "</string>
    <string name="desclabel">"Description: "</string>
    <string name="emaillabel">"Email ID: "</string>
        <string name="presidentlabel">"President: "</string>
         <string name="genseclabel">"GenSec: "</string>
    
    
    
    <string name="action_settings">Settings</string>
    
   
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="planets_array">
        <item>Home</item>
        <item>Add Event</item>
        <item>Societies</item>
        <item>Our Mission</item>
    </string-array>
    
    
    
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    

</resources>