<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/titlelabel"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlelabel" />

    <TextView
        android:id="@+id/title"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/titlelabel" />

    <TextView
        android:id="@+id/datelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlelabel"
        android:text="@string/datelabel" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@+id/datelabel" />

    <TextView
        android:id="@+id/venuelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datelabel"
        android:text="@string/venuelabel" />

    <TextView
        android:id="@+id/venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_toRightOf="@+id/venuelabel" />
    <TextView
        android:id="@+id/timelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/venuelabel"
        android:text="@string/timelabel" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/venue"
        android:layout_toRightOf="@+id/timelabel" />
    
     <TextView
        android:id="@+id/desclabel"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timelabel"
        android:text="@string/desclabel" />

    <TextView
        android:id="@+id/description"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_toRightOf="@+id/desclabel" />

    <ImageView
        android:id="@+id/pic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"        
        android:padding="1dp" />

</RelativeLayout>