
 
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="true">
        
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"    
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/pic"
        android:layout_width="264dp"
        android:layout_height="219dp"
        android:layout_gravity="center"        
        android:scaleType="fitXY"
        android:background="#fff"
        />

      <TextView
        android:id="@+id/pidlabel"       
        android:layout_width="wrap_content"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/pid" 
        android:layout_width="wrap_content"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:layout_height="wrap_content"
         />
     
     
     <TextView
        android:id="@+id/titlelabel"
        android:textStyle="bold"
        android:scaleType="fitXY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlelabel" />
     
     <TextView
        android:id="@+id/title"
        android:textStyle="bold" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/titlelabel" 
        android:scaleType="fitXY"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
     
     <TextView
        android:id="@+id/desclabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlelabel"
        android:scaleType="fitXY"
        android:text="@string/desclabel" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:scaleType="fitXY"
        android:layout_toRightOf="@+id/desclabel" />
    
    <TextView
        android:id="@+id/emaillabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desclabel"
        android:scaleType="fitXY"
        android:text="@string/emaillabel" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:scaleType="fitXY"
        android:layout_toRightOf="@+id/emaillabel" />
   
    
<TextView
        android:id="@+id/presidentlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_below="@+id/emaillabel"
        android:text="@string/presidentlabel" />

    <TextView
        android:id="@+id/president"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:scaleType="fitXY"
        android:layout_toRightOf="@+id/presidentlabel" />
 

  <TextView
        android:id="@+id/genseclabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/presidentlabel"
        android:layout_gravity="fill"
        android:scaleType="fitXY"
        android:text="@string/genseclabel" />

    <TextView
        android:id="@+id/gensec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/president"
        android:layout_gravity="fill"
        android:scaleType="fitXY"
        android:layout_toRightOf="@+id/genseclabel" />

  
</LinearLayout>

</ScrollView>

